Adicionado método para filtra json por queryString
