# src/models/CervejaQuery.ts
@@ -1,0 +1,10 @@
+export interface CervejaQuery {
+    nome: string;
+    descricao: string;
+    descricaoMarca: string;
+    harmonizacao: string;
+    ingredientes: string;
+    teorAlcoolico: string;
+    ibu: string;
+    tipo: string;
+}
